Agregada barra de busqueda sobre continentes

--- a/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
@@ -1,4 +1,7 @@
 <div ng-init="list = true">
+    <div class="row">
+
+    </div>
     <div  class="container">
         <div class="row profile">
             <div class="col-md-3">
@@ -50,6 +53,14 @@
                 <!-- END MENU -->
             </div>
             <div class="col-md-9" ng-if="list">
+
+                <div class="input-group">
+                    <input type="text" class="form-control" placeholder="Search for...">
+                    <span class="input-group-btn">
+                        <button class="btn btn-default" type="button">Go!</button>
+                    </span>
+                </div>
+
                 <div id="works"  class=" clearfix grid">
                     <figure class="effect-oscar  wowload fadeIn">
 
