--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -64,6 +64,7 @@
      <script src="resources/js/timeline.js" type="text/javascript"></script>
      <script src="resources/js/vis.min.js" type="text/javascript"></script>
      <link href="resources/css/vis.min.css" rel="stylesheet" type="text/css"/>
+     <link href="resources/css/timeline.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div class="container-fluid">
