--- a/punajut/src/main/webapp/src/timeline/timeline.tpl.html
+++ b/punajut/src/main/webapp/src/timeline/timeline.tpl.html
@@ -4,20 +4,57 @@
 <script type="text/javascript">
   // DOM element where the Timeline will be attached
   var container = document.getElementById('visualization');
-
+  var it = 1;
+  var cont = 1;
   // Create a DataSet (allows two way data-binding)
   var items = new vis.DataSet([
-    {id: 1, content: 'item 1', start: '2013-04-20'},
-    {id: 2, content: 'item 2', start: '2013-04-14'},
-    {id: 3, content: 'item 3', start: '2013-04-18'},
-    {id: 4, content: 'item 4', start: '2013-04-16', end: '2013-04-19'},
-    {id: 5, content: 'item 5', start: '2013-04-25'},
-    {id: 6, content: 'item 6', start: '2013-04-27'}
+   // {className:'it2' ,id: 2, content: 'item 2', start: '2013-04-14'},
+   // {className:'it3' ,id: 3, content: 'item 3', start: '2013-04-18'},
+   // {className:'it4' ,id: 4, content: 'item 4', start: '2013-04-16', end: '2013-04-19'},
+   // {className:'it5' ,id: 5, content: 'item 5', start: '2013-04-25'}
   ]);
-
   // Configuration for the Timeline
-  var options = {};
+  var options = {
+      editable: true,
+      selectable:true,
+
+      onAdd: function(item, callback)
+      {
+          if(it === 6)
+              it = 1;
+
+          item.className = 'it'+it;
+          it++;
+          item.content = 'Evento'+cont;
+          cont++;
+          callback(item);
+      },
+
+      onRemove: function(item, callback)
+      {
+          if(it === 1)
+              it=6;
+          else
+              it--;
+          callback(item);
+      }
+};
 
   // Create a Timeline
   var timeline = new vis.Timeline(container, items, options);
   </script>
+
+  <div class="sweet-alert hideSweetAlert" data-custom-class data-has-cancel-button="true" data-has-confirm-button="true" data-allow-outside-click="false"  data-has-done-function="true"  data-animation="pop"  data-timer="null"  style="display: block; margin-top: -154px;">
+        <div class="sa-icon sa-custom" style="display: none;">
+      <h2>Evento</h2>
+  </div>
+  <div class="sa-confirm-button-container">
+      <button class="confirm" tabindex="1" style="display: inline-block; box-shadow: rgba(140, 212, 245, 0.8) 0px 0px 2px, rgba(0, 0, 0, 0.0470588) 0px 0px 0px 1px inset; background-color: rgb(140, 212, 245);">Ok</button>
+  </div>
+      <div class="la-ball-fall">
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+  </div>
+
