--- a/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
@@ -63,18 +63,15 @@
 
                 <div id="works"  class=" clearfix grid">
                     <figure class="effect-oscar  wowload fadeIn">
-
-                        <img src="resources/imagenes/Oceania.jpg" alt="oceania"/>
+                        <img src="resources/imagenes/img_itinerario/Oceania.jpg" alt="oceania"/>
                         <figcaption>
                             <h2>Oceania</h2>
                             <p>???<br>
                                 <a href="http://www.lisbon-tourist-guide.com/image-files/sydney-opera_1.jpg" title="1" data-gallery>Mas</a></p>
                         </figcaption>
                     </figure>
-
-
                     <figure class="effect-oscar  wowload fadeIn">
-                        <img src="resources/imagenes/Europa.jpg" alt="img01"/>
+                        <img src="../../resources/imagenes/img_itinerario/Europa.jpg" alt="Europa"/>
                         <figcaption>
                             <h2>Europa</h2>
                             <p>La cuna de la civilizacion occidental<br>
@@ -82,7 +79,7 @@
                         </figcaption>
                     </figure>
                     <figure class="effect-oscar  wowload fadeIn">
-                        <img src="resources/imagenes/Asia.jpg" alt="img01"/>
+                        <img src="../../resources/imagenes/img_itinerario/Asia.jpg" alt=""/>
                         <figcaption>
                             <h2>Asia</h2>
                             <p>Viaja por la maravillosa tierra oriental<br>
@@ -91,7 +88,7 @@
                     </figure>
 
                     <figure class="effect-oscar  wowload fadeIn">
-                        <img src="resources/imagenes/North America.jpg" alt="img01"/>
+                        <img src="../../resources/imagenes/img_itinerario/North America.jpg" alt=""/>
                         <figcaption>
                             <h2>Norte America</h2>
                             <p>???<br>
@@ -100,7 +97,7 @@
                     </figure>
 
                     <figure class="effect-oscar  wowload fadeIn">
-                        <img src="resources/imagenes/Africa.jpg" alt="img01"/>
+                        <img src="../../resources/imagenes/img_itinerario/Africa.jpg" alt=""/>
                         <figcaption>
                             <h2>Africa</h2>
                             <p>Disfruta de la naturaleza en su maximo esplendor<br>
@@ -108,7 +105,7 @@
                         </figcaption>
                     </figure>
                     <figure class="effect-oscar  wowload fadeIn">
-                        <img src="resources/imagenes/Latinoamerica.png" alt="img01"/>
+                        <img src="../../resources/imagenes/img_itinerario/Latinoamerica.png" alt=""/>
                         <figcaption>
                             <h3>Latinoamerica</h3>
                             <p>Viaja!!<br>
@@ -119,7 +116,6 @@
             </div>
         </div>
     </div>
-
     <div ng-if="!list" class="well">
         <div class="col-md-9">
             <div id="works"  class=" clearfix grid">
