--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -61,7 +61,9 @@
         <link href="resources/css/timeline.css" rel="stylesheet"  property='stylesheet' type="text/css"/>-->
     <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.14.0/vis.min.js"></script>
      <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.14.0/vis.min.css" rel="stylesheet" type="text/css" />-->
-     <script src="resources/js/timeline.js" type="text/javascript"></script>
+   
+
+
      <script src="resources/js/vis.min.js" type="text/javascript"></script>
      <link href="resources/css/vis.min.css" rel="stylesheet" type="text/css"/>
      <link href="resources/css/timeline.css" rel="stylesheet" type="text/css"/>
@@ -104,5 +106,8 @@
         <!-- Se intentó importar con url pero no sirvió-->
         <script src="resources/js/holder.min.js" type="text/javascript"></script>
         <script src="resources/js/ie10-viewport-bug-workaround.js" type="text/javascript"></script>
+
+        <!--timeline-->
+        <!--<script src="resources/js/timeline.js" type="text/javascript"></script>-->
     </body>
 </html>
