Correcciones en itinerarios.html

--- a/punajut/src/main/webapp/src/itinerario/itinerarios.html
+++ b/punajut/src/main/webapp/src/itinerario/itinerarios.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <!-- metadatos -->
-    <title>GoTravel</title>
+  <title>GoTravel</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
@@ -13,6 +13,7 @@
 
 <body>
 
+    <!-- NAVIGATION BAR -->
 <nav class="navbar navbar-inverse">
   <div class="container-fluid">
     <div class="navbar-header">
@@ -36,7 +37,7 @@
   </div>
 </nav>
 
-<!-- Barra perfil -->
+<!-- BARRA LATERAL -->
 <div class="container-fluid text-center">
   <div class="row content">
     <div class="col-sm-2 sidenav">
@@ -90,6 +91,8 @@
                         </div>
 
     </div>
+
+    <!-- SECTION -->
     <div class="col-sm-8 text-left">
       <h1 style="text-align:center;">Mis itinerarios</h1>
       <p style="text-align:center;">Selecciona el itinerario que quieres ver</p>
