Agregado borrador de agregar fechas a itinerario

--- a/punajut/src/main/webapp/src/itinerario/crearItinerario.html
+++ b/punajut/src/main/webapp/src/itinerario/crearItinerario.html
@@ -1,4 +1,23 @@
-<div>
-
-
-</div>
+<div class="container">
+            <div class="row">
+                <h1>Bienvenido, primero escoge las fechas de tu itinerario</h1>
+                <div class='col-sm-5'>
+                    <div class="form-group">
+                        <h2>Escoge tu fecha de inicio</h2>
+                        <div class='input-group date'  id='from'>
+                            <input type='text' class="form-control" />
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar"></span>
+                            </span>
+                        </div>
+                        <h2>Escoge tu fecha fin</h2>
+                        <div class='input-group date' id='to'>
+                            <input type='text' class="form-control" />
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar"></span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
