--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -57,16 +57,22 @@
         <script src="resources/js/imgcrr.js"></script>
 
         <!--timeline-->
-     <!--   <script src="resources/js/jquery.timelinr-0.9.54.js"></script>
-        <link href="resources/css/timeline.css" rel="stylesheet"  property='stylesheet' type="text/css"/>-->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.14.0/vis.min.js"></script>
-     <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.14.0/vis.min.css" rel="stylesheet" type="text/css" />-->
-   
+        <!--   <script src="resources/js/jquery.timelinr-0.9.54.js"></script>
+           <link href="resources/css/timeline.css" rel="stylesheet"  property='stylesheet' type="text/css"/>-->
+        <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/vis/4.14.0/vis.min.js"></script>
+         <link href="https://cdnjs.cloudflare.com/ajax/libs/vis/4.14.0/vis.min.css" rel="stylesheet" type="text/css" />-->
+
+        <!-- Para el calendario de crear itinerario-->
+        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/moment.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/locale/es.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" rel="stylesheet" type="text/css"/>
+        <script src="src/itinerario/crearItinerario.js" type="text/javascript"></script>
 
 
-     <script src="resources/js/vis.min.js" type="text/javascript"></script>
-     <link href="resources/css/vis.min.css" rel="stylesheet" type="text/css"/>
-     <link href="resources/css/timeline.css" rel="stylesheet" type="text/css"/>
+        <script src="resources/js/vis.min.js" type="text/javascript"></script>
+        <link href="resources/css/vis.min.css" rel="stylesheet" type="text/css"/>
+        <link href="resources/css/timeline.css" rel="stylesheet" type="text/css"/>
     </head>
     <body>
         <div class="container-fluid">
@@ -109,5 +115,34 @@
 
         <!--timeline-->
         <!--<script src="resources/js/timeline.js" type="text/javascript"></script>-->
-    </body>
+
+        <div class="container">
+            <div class="row">
+                <h1>Bienvenido, primero escoge las fechas de tu itinerario</h1>
+                <form id="frm" onsubmit="return validateForm()">
+                    <div class='col-sm-5'>
+                        <div class="form-group">
+                            <h2>Escoge tu fecha de inicio</h2>
+                            <div class='input-group date'  id='from'/>
+                            <input type='text' class="form-control" required>
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar"></span>
+                            </span>
+                        </div>
+                        <h2>Escoge tu fecha fin</h2>
+                        <div class='input-group date' id='to'>
+                            <input type='text' class="form-control" required>
+                            <span class="input-group-addon">
+                                <span class="glyphicon glyphicon-calendar"></span>
+                            </span>
+                        </div>
+                    </div>
+                    <button type="submit" class="btn btn-success" aria-label="Right Align">
+                        <span class="glyphicon glyphicon-ok" aria-hidden="true"></span>
+                    </button>
+                    </div>
+                </form>
+            </div>
+        </div>
+</body>
 </html>
