--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -73,6 +73,10 @@
         <script src="resources/js/vis.min.js" type="text/javascript"></script>
         <link href="resources/css/vis.min.css" rel="stylesheet" type="text/css"/>
         <link href="resources/css/timeline.css" rel="stylesheet" type="text/css"/>
+
+         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     </head>
     <body>
         <div class="container-fluid">
