--- a/punajut/src/main/webapp/src/Pagina de inicio/paginaDeInicio.tpl.html
+++ b/punajut/src/main/webapp/src/Pagina de inicio/paginaDeInicio.tpl.html
@@ -105,7 +105,7 @@
                               <input type="checkbox" value="remember-me"> Remember me
                             </label>
                           </div>
-                          <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
+                            <a ui-sref="PerfilInicio"><button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button></a>
                         </form>
 
 
@@ -156,8 +156,8 @@
                             <label for="inputPassword2" class="sr-only">Password</label>
                             <input type="password" id="inputPassword2" class="form-control" placeholder="Confirm Password" required>
 
-                            <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
-                      </form>
+                            <a ui-sref="PerfilInicio"><button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button></a>
+                     </form>
                   </div>
                   </div>
                   <div class="modal-footer">
