--- a/punajut/src/main/webapp/src/itinerario/itinerarios.html
+++ b/punajut/src/main/webapp/src/itinerario/itinerarios.html
@@ -9,7 +9,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
         <link rel="stylesheet" href="css/itinerarioscss.css">
-        <script src="js/itinerariosjs.js"></script>
+        <script src="resources/js/itinerariosjs.js"></script>
 
     </head>
 
