Correciones en el js para itinerarios.html

--- a/punajut/src/main/webapp/src/itinerario/itinerarios.html
+++ b/punajut/src/main/webapp/src/itinerario/itinerarios.html
@@ -122,46 +122,43 @@
                 </div>
             </div>
         </div>
-
-        function nuevaPagina1() {
-        var opcion=prompt("¿Qué quieres hacer con el itinerario 1? Editar:0, Eliminar:1");
-
-        if(opcion==0)
-        {
-        alert("Editar imagen");
-        }
-        else
-        {
-        alert("Eliminar imagen");
-        }
-        }
-
-        function nuevaPagina2() {
-        var opcion=prompt("¿Qué quieres hacer con el itinerario 2? Editar:0, Eliminar:1");
-
-        if(opcion==0)
-        {
-        alert("Editar imagen");
-        }
-        else
-        {
-        alert("Eliminar imagen");
-        }
-        }
-
-        function nuevaPagina3() {
-        var opcion=prompt("¿Qué quieres hacer con el itinerario 3? Editar:0, Eliminar:1");
-
-        if(opcion==0)
-        {
-        alert("Editar imagen");
-        }
-        else
-        {
-        alert("Eliminar imagen");
-        }
-        }
         <script>
+
+            function nuevaPagina1() {
+                var opcion = prompt("¿Qué quieres hacer con el itinerario 1? Editar:0, Eliminar:1");
+
+                if (opcion == 0)
+                {
+                    alert("Editar imagen");
+                } else
+                {
+                    alert("Eliminar imagen");
+                }
+            }
+
+            function nuevaPagina2() {
+                var opcion = prompt("¿Qué quieres hacer con el itinerario 2? Editar:0, Eliminar:1");
+
+                if (opcion == 0)
+                {
+                    alert("Editar imagen");
+                } else
+                {
+                    alert("Eliminar imagen");
+                }
+            }
+
+            function nuevaPagina3() {
+                var opcion = prompt("¿Qué quieres hacer con el itinerario 3? Editar:0, Eliminar:1");
+
+                if (opcion == 0)
+                {
+                    alert("Editar imagen");
+                } else
+                {
+                    alert("Eliminar imagen");
+                }
+            }
             function nuevaPagina4() {
                 var opcion = prompt("¿Qué quieres hacer con el itinerario 4? Editar:0, Eliminar:1");
 
