primer intenti multivistas

--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -108,6 +108,8 @@
 
             </div>
             <div ui-view></div>
+            <div ui-view="perfil"></div>
+            <div ui-view="loQueEstaAlLado"></div>
         </div>
 
         <!-- Esto sobra ya que se importó arriba con un link, y esta importacion debe ir arriba-->
@@ -146,7 +148,7 @@
                     </button>
                     </div>
                 </form>
-            </div>-->
-</div>
+            </div>
+</div>-->
 </body>
 </html>
