--- a/punajut/src/main/webapp/src/Pagina de inicio/PerfilInicio.tpl.html
+++ b/punajut/src/main/webapp/src/Pagina de inicio/PerfilInicio.tpl.html
@@ -10,34 +10,33 @@
                     <!-- SIDEBAR USER TITLE -->
                     <div class="profile-usertitle">
                         <div class="profile-usertitle-name">
-                            Nombre
+                            nickname
                         </div>
                     </div>
                 </div>
                 <!-- END SIDEBAR USER TITLE -->
                 <!-- SIDEBAR BUTTONS -->
                 <div class="profile-userbuttons">
-                    <button type="button" class="btn btn-success btn-sm">Follow</button>
-                    <button type="button" class="btn btn-danger btn-sm">Message</button>
+                    <button type="button" class="btn btn-success btn-sm">EditarPerfil</button>
                 </div>
                 <!-- END SIDEBAR BUTTONS -->
                 <!-- SIDEBAR MENU -->
                 <div class="profile-usermenu">
                     <ul class="nav">
                         <li class="active">
-                            <a href="#">
+                            <a ui-view="seleccionaFecha">
                                 <i class="glyphicon glyphicon-home"></i>
-                                Home </a>
+                                Crear Itinerario </a>
                         </li>
                         <li>
-                            <a href="#">
+                            <a ui-view="seleccionaFecha">
                                 <i class="glyphicon glyphicon-user"></i>
-                                Account Settings </a>
+                                Itinerario</a>
                         </li>
                         <li>
                             <a href="#" target="_blank">
                                 <i class="glyphicon glyphicon-ok"></i>
-                                Itinerarios </a>
+                                Foro </a>
                         </li>
                         <li>
                             <a href="#">
