--- a/punajut/src/main/webapp/src/Pagina de inicio/PerfilInicio.tpl.html
+++ b/punajut/src/main/webapp/src/Pagina de inicio/PerfilInicio.tpl.html
@@ -17,7 +17,9 @@
                 <!-- END SIDEBAR USER TITLE -->
                 <!-- SIDEBAR BUTTONS -->
                 <div class="profile-userbuttons">
-                    <button type="button" class="btn btn-success btn-sm">EditarPerfil</button>
+
+                    <a ui-sref="configurarCuenta"><button type="button" class="btn btn-success btn-sm">EditarPerfil</button></a>
+
                 </div>
                 <!-- END SIDEBAR BUTTONS -->
                 <!-- SIDEBAR MENU -->
