--- a/punajut/src/main/webapp/src/Pagina de inicio/configurarCuenta.tpl.html
+++ b/punajut/src/main/webapp/src/Pagina de inicio/configurarCuenta.tpl.html
@@ -13,11 +13,7 @@
               <input type="password" id="inputPassword" class="form-control" placeholder="Nuevo Password" required>
               <label for="inputPassword" class="sr-only">Confirmar Password</label>
               <input type="password" id="inputPassword" class="form-control" placeholder="Confirmar Password" required>
-
-              <button class="btn btn-lg btn-primary btn-block" type="submit">Guardar Cambios</button>
-
-
-
+              <a ui-sref="PerfilInicio"><button class="btn btn-lg btn-primary btn-block" type="submit">Guardar Cambios</button></a>
         </form>
     </div>
 </div>>
