--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -94,6 +94,7 @@
                                 <li><a ui-sref="Sign up">Sign up</a></li>
                                 <li><a ui-sref="verContinentes">Itinerarios</a></li>
                                 <li><a ui-sref="timeline">TimeLine</a></li>
+                                <li><a ui-sref="itinerarios">Ver itinerario</a></li>
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> LogOut</a></li>
