--- a/punajut/src/main/webapp/src/itinerario/itinerarios.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/itinerarios.tpl.html
@@ -1,7 +1,7 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="es">
     <head>
-        <!-- METADATOS -->
+        <!-- METADATOS
         <title>GoTravel</title>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,11 +11,10 @@
         <link rel="stylesheet" href="css/itinerarioscss.css">
         <script src="resources/js/itinerariosjs.js"></script>
 
-    </head>
+    </head>-->
 
-    <body>
-
-        <!-- NAVIGATION BAR -->
+   <!--  <body>
+              <!-- NAVIGATION BAR
         <nav class="navbar navbar-inverse">
             <div class="container-fluid">
                 <div class="navbar-header">
@@ -37,7 +36,7 @@
                     </ul>
                 </div>
             </div>
-        </nav>
+        </nav>-->
 
         <!-- BARRA LATERAL -->
         <div class="container-fluid text-center">
@@ -171,5 +170,4 @@
                 }
             }
         </script>
-    </body>
-</html>
+ 
