Correcion imagen 1 itinerarios.tpl.html

--- a/punajut/src/main/webapp/src/itinerario/itinerarios.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/itinerarios.tpl.html
@@ -132,6 +132,7 @@
                 } else
                 {
                     alert("Eliminar imagen");
+                    document.getElementById("itinerario1").src="";
                 }
             }
 
@@ -170,4 +171,3 @@
                 }
             }
         </script>
- 
