Avances en borrar imagen 1 en itinerarios.tpl.html

--- a/punajut/src/main/webapp/src/itinerario/itinerarios.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/itinerarios.tpl.html
@@ -132,7 +132,9 @@
                 } else
                 {
                     alert("Eliminar imagen");
-                    document.getElementById("itinerario1").src="";
+                    var elem=document.getElementById("itinerario1");
+                    elem.parentNode.removeChild(elem);
+                    return false;
                 }
             }
 
