--- a/punajut/src/main/webapp/src/itinerario/itinerarios.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/itinerarios.tpl.html
@@ -99,7 +99,7 @@
                                 <p style="text-align:center;">Selecciona el itinerario que quieres ver</p>
                                 <hr>
                                 <!-- Itinerarios -->
-                                <div class="col-sm-3">
+                                <div id="imagen1" class="col-sm-3">
                                     <h3>Itinerario 1</h3>
                                     <img id="itinerario1" src="https://civitatis.cachefly.net/guias/londres/fotos/londres.jpg" alt="Londres" style="width:150px;height:150px;" onclick="nuevaPagina1()">
                                 </div>
@@ -132,7 +132,7 @@
                 } else
                 {
                     alert("Eliminar imagen");
-                    var elem=document.getElementById("itinerario1");
+                    var elem=document.getElementById("imagen1");
                     elem.parentNode.removeChild(elem);
                     return false;
                 }
