Ajustes en importaciones

--- a/punajut/src/main/webapp/src/itinerario/crearItinerario.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/crearItinerario.tpl.html
@@ -27,7 +27,7 @@
     </div>
      <script type="text/javascript">
        $( document ).ready(function(){ $(function () {
-            $('#from').datetimepicker({datepicker: true});
+            $('#from').datetimepicker({datetimepicker: true});
             $('#to').datetimepicker();
         });
         });
