--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -75,10 +75,6 @@
         <script src="resources/js/vis.min.js" type="text/javascript"></script>
         <link href="resources/css/vis.min.css" rel="stylesheet" type="text/css"/>
         <link href="resources/css/timeline.css" rel="stylesheet" type="text/css"/>
-
-         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     </head>
     <body>
         <div class="container-fluid">
@@ -96,7 +92,7 @@
                         <div class="collapse navbar-collapse" id="myNavbar">
                             <ul class="nav navbar-nav">
                                 <li><a ui-sref="paginaDeInicio">Home</a></li>
-                                <li><a ui-sref="crearItinerario">Itinerarios</a></li>
+                                <li><a ui-sref="crearItinerario">Crear Itinerario</a></li>
                                 <li><a ui-sref="timeline">TimeLine</a></li>
                                 <li><a ui-sref="itinerarios">Ver itinerario</a></li>
                                 <li><a ui-sref="itinerarioYmapa">Ver itinerarioYmapa</a></li>
@@ -110,15 +106,16 @@
 
             </div>
             <div ui-view></div>
+            <div ui-view="perfil"></div>
+            <div ui-view="loQueEstaAlLado"></div>
         </div>
 
         <!-- Esto sobra ya que se importó arriba con un link, y esta importacion debe ir arriba-->
         <!--<script>window.jQuery || document.write('<script src="js/jquery.min.js"><\/script>')</script>-->
 
         <!-- Se intentó importar con url pero no sirvió-->
-        <script src="resources/js/holder.min.js" type="text/javascript"></script>
         <script src="resources/js/ie10-viewport-bug-workaround.js" type="text/javascript"></script>
-
+        <script src="resources/js/holder.min.js" type="text/javascript"></script>
         <!--timeline-->
         <!--<script src="resources/js/timeline.js" type="text/javascript"></script>-->
 <!--
@@ -149,6 +146,9 @@
                     </div>
                 </form>
             </div>
-    </div>-->
+
+    </div>
+
+</div>-->
 </body>
 </html>
