--- a/punajut/src/main/webapp/src/itinerario/itinerarioYmapa.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/itinerarioYmapa.tpl.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!--<!DOCTYPE html>
 <html lang="es">
 
 <head>
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <link rel="stylesheet" href="itinerarioYmapacss.css">
+  <link href="../../resources/css/itinerarioYmapacss.css" rel="stylesheet" type="text/css"/>
 </head>
 
 <body>
