--- a/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
@@ -43,7 +43,7 @@
                         <li>
                             <a href="#">
                                 <i class="glyphicon glyphicon-flag"></i>
-                                Help </a>
+                                Foro </a>
                         </li>
                     </ul>
                 </div>
