--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -54,8 +54,8 @@
         <link href="resources/css/starter-template.css"  property='stylesheet' rel="stylesheet" type="text/css"/>
 
         <!--Recuerdos-->
-        <script src="resources/js/traffic.js"></script>
-        <script src="resources/js/imgcrr.js"></script>
+<!--        <script src="resources/js/traffic.js"></script>
+        <script src="resources/js/imgcrr.js"></script>-->
 
         <!--timeline-->
         <!--   <script src="resources/js/jquery.timelinr-0.9.54.js"></script>
@@ -68,9 +68,9 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.11.2/locale/es.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" rel="stylesheet" type="text/css"/>
-        <!--<script src="src/itinerario/crearItinerario.js" type="text/javascript"></script>-->
-        <!--<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.11.4/i18n/jquery-ui-i18n.js"></script>-->
 
+        <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.min.css" />
+        <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>
 
         <script src="resources/js/vis.min.js" type="text/javascript"></script>
         <link href="resources/css/vis.min.css" rel="stylesheet" type="text/css"/>
@@ -118,8 +118,8 @@
         <script src="resources/js/holder.min.js" type="text/javascript"></script>
         <!--timeline-->
         <!--<script src="resources/js/timeline.js" type="text/javascript"></script>-->
-<!--
-        <div class="container">
+
+        <!--<div class="container">
             <div class="row">
                 <h1>Bienvenido, primero escoge las fechas de tu itinerario</h1>
                 <form id="frm" onsubmit="return validateForm()">
@@ -147,8 +147,8 @@
                 </form>
             </div>
 
-    </div>
+    </div>-->
 
-</div>-->
-</body>
+
+    </body>
 </html>
