+Se añade las tres vistas del foro -Falta mejorar los estilos -Falta terminar la tercera vista

--- a/punajut/src/main/webapp/src/comunidad/foroMain.tpl.html
+++ b/punajut/src/main/webapp/src/comunidad/foroMain.tpl.html
@@ -3,17 +3,7 @@
 <html>
 <head>
 	<title>Test foroMain</title>
-        <link href="../../resources/css/foroMain.css" rel="stylesheet" type="text/css"/>
-	<!-- Latest compiled and minified CSS -->
-	<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
 
-	<!-- jQuery library -->
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-
-	<!-- Latest compiled JavaScript -->
-	<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-	<!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
 </head>
 <body>
 <!--Parte a utilizar de este Template -->
@@ -44,7 +34,7 @@
 			 				</td>
 			 				<td>
 			 					<div>
-			 						<img class="userpic-lastpost" src="../../resources/imagenes/userIcon.png" width="30" height="30">
+			 						<img class="userpic-lastpost" src="resources/imagenes/userIcon.png" width="30" height="30">
 			 						<div class="user-info-post">
 			 							<span class="lastpost-info">
 			 							<a href=""><span class="post-title-link">how much dediwated wam do i need fo server?</span></a><br>
@@ -64,7 +54,7 @@
 			 				</td>
 			 				<td>
 			 					<div>
-			 						<img class="userpic-lastpost" src="../../resources/imagenes/userIcon.png" width="30" height="30">
+			 						<img class="userpic-lastpost" src="resources/imagenes/userIcon.png" width="30" height="30">
 			 						<div class="user-info-post">
 			 							<span class="lastpost-info">
 			 								<a href=""><span class="post-title-link">how much dediwated wam do i need fo server?</span></a><br>
@@ -84,7 +74,7 @@
 			 				</td>
 			 				<td>
 			 					<div>
-			 						<img class="userpic-lastpost" src="../../resources/imagenes/userIcon.png" width="30" height="30">
+			 						<img class="userpic-lastpost" src="resources/imagenes/userIcon.png" width="30" height="30">
 			 						<div class="user-info-post">
 			 							<span class="lastpost-info">
 			 								<a href=""><span class="post-title-link">how much dediwated wam do i need fo server?</span></a><br>
@@ -104,7 +94,7 @@
 			 				</td>
 			 				<td>
 			 					<div>
-			 						<img class="userpic-lastpost" src="../../resources/imagenes/userIcon.png" width="30" height="30">
+			 						<img class="userpic-lastpost" src="resources/imagenes/userIcon.png" width="30" height="30">
 			 						<div class="user-info-post">
 			 							<span class="lastpost-info">
 			 								<a href=""><span class="post-title-link">how much dediwated wam do i need fo server?</span></a><br>
@@ -146,7 +136,7 @@
 			 				</td>
 			 				<td>
 			 					<div>
-			 						<img class="userpic-lastpost" src="../../resources/imagenes/userIcon.png" width="30" height="30">
+			 						<img class="userpic-lastpost" src="resources/imagenes/userIcon.png" width="30" height="30">
 			 						<div class="user-info-post">
 			 							<span class="lastpost-info">
 			 							<a href=""><span class="post-title-link">how much dediwated wam do i need fo server?</span></a><br>
