--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -21,6 +21,8 @@
         <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"  property='stylesheet' rel="stylesheet"/>
 
         <!--Dependencias bootstrap-->
+        <!-- Optional theme -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
         <!-- bootstrap js-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
         <!--<script src="resources/js/bootstrap.min.js" type="text/javascript"></script>-->
@@ -68,11 +70,16 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
         <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css" rel="stylesheet" type="text/css"/>
         <script src="src/itinerario/crearItinerario.js" type="text/javascript"></script>
-
+        <!-- Para el foro -->
+        <link href="resources/css/foroMain.css" rel="stylesheet" type="text/css"/>
 
         <script src="resources/js/vis.min.js" type="text/javascript"></script>
         <link href="resources/css/vis.min.css" rel="stylesheet" type="text/css"/>
         <link href="resources/css/timeline.css" rel="stylesheet" type="text/css"/>
+
+         <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+        <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
     </head>
     <body>
         <div class="container-fluid">
@@ -90,10 +97,11 @@
                         <div class="collapse navbar-collapse" id="myNavbar">
                             <ul class="nav navbar-nav">
                                 <li><a ui-sref="paginaDeInicio">Home</a></li>
-                                <li><a ui-sref="Login">Sign in</a></li>
-                                <li><a ui-sref="Sign up">Sign up</a></li>
                                 <li><a ui-sref="verContinentes">Itinerarios</a></li>
                                 <li><a ui-sref="timeline">TimeLine</a></li>
+                                <li><a ui-sref="itinerarios">Ver itinerario</a></li>
+                                <li><a ui-sref="itinerarioYmapa">Ver itinerarioYmapa</a></li>
+                                <li><a ui-sref="Foro">Foro</a></li>
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
                                 <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> LogOut</a></li>
@@ -104,6 +112,8 @@
 
             </div>
             <div ui-view></div>
+            <div ui-view="perfil"></div>
+            <div ui-view="loQueEstaAlLado"></div>
         </div>
 
         <!-- Esto sobra ya que se importó arriba con un link, y esta importacion debe ir arriba-->
@@ -115,7 +125,7 @@
 
         <!--timeline-->
         <!--<script src="resources/js/timeline.js" type="text/javascript"></script>-->
-
+<!--
         <div class="container">
             <div class="row">
                 <h1>Bienvenido, primero escoge las fechas de tu itinerario</h1>
@@ -143,6 +153,6 @@
                     </div>
                 </form>
             </div>
-        </div>
+</div>-->
 </body>
 </html>
