--- a/punajut/src/main/webapp/src/itinerario/itinerarioYmapa.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/itinerarioYmapa.tpl.html
@@ -8,117 +8,12 @@
   <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <style>
-      /* Remove the navbar's default margin-bottom and rounded borders */
-
-    .navbar {
-      background: #28292A;
-      /* For browsers that do not support gradients */
-      background: -webkit-linear-gradient(left, #28292A, #747575);
-      /* For Safari 5.1 to 6.0 */
-      background: -o-linear-gradient(right, #28292A, #747575);
-      /* For Opera 11.1 to 12.0 */
-      background: -moz-linear-gradient(right, #28292A, #747575);
-      /* For Firefox 3.6 to 15 */
-      background: linear-gradient(to right, #28292A, #747575);
-      /* Standard syntax */
-      margin-bottom: 0;
-      border-radius: 0;
-    }
-
-    .btn.btn-primary.btn-lg {
-      height: 50px;
-      width: 220px;
-      text-align: center;
-      font-size: 15px;
-    }
-
-    #itinerario {
-      max-width: 100%;
-      /* This will remove the outer padding, and push content edge to edge */
-      padding-right: 0;
-      padding-left: 0;
-      float: right;
-      width: 800px;
-    }
-
-    .btn.btn-default {
-      background-color: #28292A;
-      margin-bottom: 0;
-      border-radius: 0;
-    }
-
-    #mapa {
-      float: right;
-      margin-bottom: 0;
-      border-radius: 0;
-      width: 620px;
-      height: 620px;
-      padding: 10px;
-    }
-
-    #opciones {
-      background: #28292A;
-      /* For browsers that do not support gradients */
-      background: -webkit-linear-gradient(left, #28292A, #747575);
-      /* For Safari 5.1 to 6.0 */
-      background: -o-linear-gradient(right, #28292A, #747575);
-      /* For Opera 11.1 to 12.0 */
-      background: -moz-linear-gradient(right, #28292A, #747575);
-      /* For Firefox 3.6 to 15 */
-      background: linear-gradient(to right, #28292A, #747575);
-      /* Standard syntax */
-      background-color: #28292A;
-      width: 930px;
-      height: 100px;
-      padding-right: 10px;
-      padding-left: 10px;
-    }
-
-    #eventos {
-      width: auto;
-      padding-right: 10px;
-      padding-left: 10px;
-      height: 620px;
-      overflow: scroll;
-      #itinerario {
-        max-width: 100%;
-        /* This will remove the outer padding, and push content edge to edge */
-        padding-right: 0;
-        padding-left: 0;
-        width: 930px;
-      }
-      /* Set height of the grid so .sidenav can be 100% (adjust as needed) */
-      .row.content {
-        height: 450px
-      }
-      /* Set gray background color and 100% height */
-      .sidenav {
-        padding-top: 20px;
-        background-color: #f1f1f1;
-        height: 100%;
-      }
-      /* Set black background color, white text and some padding */
-      footer {
-        background-color: #28292A;
-        color: white;
-        padding: 15px;
-      }
-      /* On small screens, set height to 'auto' for sidenav and grid */
-      @media screen and (max-width: 767px) {
-        .sidenav {
-          height: auto;
-          padding: 15px;
-        }
-        .row.content {
-          height: auto;
-        }
-      }
-  </style>
+  <link rel="stylesheet" href="itinerarioYmapacss.css">
 </head>
 
 <body>
 
+    <!--
   <nav class="navbar navbar-inverse">
     <div class="container-fluid">
       <div class="navbar-header">
@@ -141,7 +36,7 @@
       </div>
     </div>
   </nav>
-
+-->
 
   <div class="container-fluid text-center">
     <div class="row content">
