--- a/punajut/src/main/webapp/src/itinerario/itinerarioYmapa.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/itinerarioYmapa.tpl.html
@@ -10,6 +10,7 @@
         <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
        <link rel="stylesheet" type="text/css" href="resources/css/itinerarioYmapacss.css">
 
+       
     </head>
 
     <body>
@@ -262,7 +263,7 @@
 
 
                     <!-- Modal evento-->
-                     <div class="modal fade" id="Event" role="dialog">
+                     <div class="modal fade" id="Event" role="dialog" >
               <div class="modal-dialog">
 
                 <!-- Modal content-->
@@ -272,30 +273,156 @@
                     <h4 class="modal-title">Informacion evento</h4>
                   </div>
                   <div class="modal-body">
-                    <div>
-                        <form class="form-signin">
-                          <label for="inputEmail" class="sr-only">Email address</label>
-                          <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
-                          <label for="inputPassword" class="sr-only">Password</label>
-                          <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
-                          <div class="checkbox">
-                            <label>
-                              <input type="checkbox" value="remember-me"> Remember me
-                            </label>
-                          </div>
-                        </form>
+
+                       <h3> Restaurante Tapitas</h3>
 
 
-                      <!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
-                      <script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
-                  </div>
+<div class="container">
+<div class="row">
+  <div class="col-sm-8">
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+      <!-- Indicators -->
+      <ol class="carousel-indicators">
+        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+        <li data-target="#myCarousel" data-slide-to="1"></li>
+      </ol>
+
+      <!-- Wrapper for slides -->
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <img src="http://placehold.it/800x400?text=IMAGE" alt="Image">
+          <div class="carousel-caption">
+            <h3> </h3>
+            <p> img1</p>
+          </div>
+        </div>
+
+        <div class="item">
+          <img src="http://placehold.it/800x400?text=Another Image Maybe" alt="Image">
+          <div class="carousel-caption">
+            <h3></h3>
+            <p>img2</p>
+          </div>
+        </div>
+      </div>
+
+      <!-- Left and right controls -->
+      <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+      <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+    </div>
+  </div>
+  <div class="col-sm-4">
+    Seleccione fecha:
+
+    <div class="container">
+    <div class="row">
+        <div class='col-sm-3'>
+            <div class="form-group">
+                <div class='input-group date' id='datetimepicker1'>
+                    <input type='text' class="form-control" />
+                    <span class="input-group-addon">
+                        <span class="glyphicon glyphicon-calendar"></span>
+                    </span>
+                </div>
+            </div>
+        </div>
+        <script type="text/javascript">
+            $(function () {
+                $('#datetimepicker1').datetimepicker();
+            });
+        </script>
+    </div>
+</div>
+   Adultos:  <div class="dropdown"  >
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">0
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li><a href="#">1</a></li>
+    <li><a href="#">2</a></li>
+    <li><a href="#">3</a></li>
+  </ul><br>
+</div>
+<br>
+    Menores:  <div class="dropdown">
+  <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">0
+  <span class="caret"></span></button>
+  <ul class="dropdown-menu">
+    <li><a href="#">1</a></li>
+    <li><a href="#">2</a></li>
+    <li><a href="#">3</a></li>
+  </ul>
+
+</div>
+<br>
+   <button type="button" class="btn btn-success" style="float:center;">Agregar a mi itinerario</button>
+
+  </div>
+</div>
+Calificación  Evento: <div class="ec-stars-wrapper">
+  <a href="#" data-value="1" title="Votar con 1 estrellas">&#9733;</a>
+  <a href="#" data-value="2" title="Votar con 2 estrellas">&#9733;</a>
+  <a href="#" data-value="3" title="Votar con 3 estrellas">&#9733;</a>
+  <a href="#" data-value="4" title="Votar con 4 estrellas">&#9733;</a>
+  <a href="#" data-value="5" title="Votar con 5 estrellas">&#9733;</a>
+</div>
+<hr>
+</div>
+
+<div class="container text-center">
+  <h3>Información turística de evento:</h3>
+  <p> A 50 kms de la capital, encontraremos el restaurante Tapitas </p>
+  <hr>
+</div>
+
+<div class="container text-center">
+  <h3>Comentarios:</h3>
+ <div class="row">
+        <div class="col-sm-3">
+          <div class="well">
+           <p>Julio</p>
+          </div>
+        </div>
+        <div class="col-sm-9">
+          <div class="well">
+            <p>Me gusto</p>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-sm-3">
+          <div class="well">
+           <p>Bo</p>
+          </div>
+        </div>
+        <div class="col-sm-9">
+          <div class="well">
+            <p>no me gusto</p>
+          </div>
+        </div>
+      </div>
+
+    </div>
+    </div>
+
+
+
+
+
+
+
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
                   </div>
                 </div>
 
-              </div>
+
             </div>
                     <footer class="container-fluid text-center">
                         <p></p>
