Arreglos vario de movimiento

--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -107,11 +107,10 @@
                         <div class="collapse navbar-collapse" id="myNavbar">
                             <ul class="nav navbar-nav">
                                 <li><a ui-sref="paginaDeInicio">Home</a></li>
+                                    <li><a ui-sref="PerfilInicio">Perfil</a></li>
 
-                                    <li><a ui-sref="crearItinerario">Crear Itinerario</a></li>
 
                                 <li><a ui-sref="timeline">TimeLine</a></li>
-                                <li><a ui-sref="itinerarios">Ver itinerario</a></li>
                                 <li><a ui-sref="itinerarioYmapa">Ver itinerarioYmapa</a></li>
 
                                 <li><a ui-sref="foroMain">Foro</a></li>
