--- a/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/verContinentes.tpl.html
@@ -15,37 +15,37 @@
                     </div>
                 </div>
             </div>
-            <!-- END SIDEBAR USER TITLE -->
-            <!-- SIDEBAR BUTTONS -->
-            <div class="profile-userbuttons">
-                <button type="button" class="btn btn-success btn-sm">EditarPerfil</button>
-            </div>
-            <!-- END SIDEBAR BUTTONS -->
-            <!-- SIDEBAR MENU -->
-            <div class="profile-usermenu">
-                <ul class="nav">
-                    <li class="active">
-                        <a ui-sref="crearItinerario">
-                            <i class="glyphicon glyphicon-home"></i>
-                            Crear Itinerario </a>
-                    </li>
-                    <li>
-                        <a ui-sref="itinerarios">
-                            <i class="glyphicon glyphicon-user"></i>
-                            Itinerario</a>
-                    </li>
-                    <li>
-                        <a ui-sref="foroMain">
-                            <i class="glyphicon glyphicon-ok" ></i>
-                            Foro </a>
-                    </li>
-                    <li>
-                        <a href="#">
-                            <i class="glyphicon glyphicon-flag"></i>
-                            Help </a>
-                    </li>
-                </ul>
-            </div>
+                <!-- END SIDEBAR USER TITLE -->
+                <!-- SIDEBAR BUTTONS -->
+                <div class="profile-userbuttons">
+                    <a ui-sref="configurarCuenta"><button type="button" class="btn btn-success btn-sm">EditarPerfil</button></a>
+                </div>
+                <!-- END SIDEBAR BUTTONS -->
+                <!-- SIDEBAR MENU -->
+                <div class="profile-usermenu">
+                    <ul class="nav">
+                        <li class="active">
+                            <a ui-sref="crearItinerario">
+                                <i class="glyphicon glyphicon-home"></i>
+                                Crear Itinerario </a>
+                        </li>
+                        <li>
+                            <a ui-sref="itinerarios">
+                                <i class="glyphicon glyphicon-user"></i>
+                                Itinerario</a>
+                        </li>
+                        <li>
+                            <a ui-sref="foroMain">
+                                <i class="glyphicon glyphicon-ok"></i>
+                                Foro </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="glyphicon glyphicon-flag"></i>
+                                Help </a>
+                        </li>
+                    </ul>
+                </div>
         </div>
             <div class="col-md-9" ng-if="list">
                 <div class="input-group">
