--- a/punajut/src/main/webapp/src/itinerario/itinerarios.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/itinerarios.tpl.html
@@ -39,7 +39,7 @@
 </nav>-->
 
 <!-- BARRA LATERAL -->
-<div class="container-fluid text-center">
+<div class="container">
     <div class="row content">
         <div class="col-sm-2 sidenav">
             <div class="container">
