cambios de navegacion timeline

--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -110,7 +110,7 @@
                                     <li><a ui-sref="PerfilInicio">Perfil</a></li>
                             </ul>
                             <ul class="nav navbar-nav navbar-right">
-                                <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> LogOut</a></li>
+                                <li><a ui-serf="paginaDeInicio"><span class="glyphicon glyphicon-log-in"></span> LogOut</a></li>
                             </ul>
                         </div>
                     </div>
