--- a/punajut/src/main/webapp/src/itinerario/itinerarioYmapa.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/itinerarioYmapa.tpl.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-<html lang="es">
 
     <head>
         <title>GoTravel</title>
@@ -231,8 +230,8 @@
                 </div>
             </div>
 
-        <div id="itinerario" class="jumbotron" style="margin:4px; padding:4px ">
-           <div class="container">
+        <div id="itinerario" >
+            <div class="container-fluid">
                 <div id="visualization"></div>
                  <script type="text/javascript">
 
@@ -315,11 +314,12 @@
                           <div></div>
                         </div>
                   </div>
-            </div>
+        </div>
         </div>
 
         <br>
         <br>
+
 
 
                     <!-- Modal evento-->
@@ -489,5 +489,3 @@ Calificación  Evento: <div class="ec-stars-wrapper">
             <p></p>
         </footer>
     </body>
-
-</html>
