Cambios para el parcial

--- a/punajut/src/main/webapp/src/Pagina de inicio/PerfilInicio.tpl.html
+++ b/punajut/src/main/webapp/src/Pagina de inicio/PerfilInicio.tpl.html
@@ -34,7 +34,7 @@
                                 Itinerario</a>
                         </li>
                         <li>
-                            <a ui-sref="foroMain">
+                            <a ui-sref="foro">
                                 <i class="glyphicon glyphicon-ok"></i>
                                 Foro </a>
                         </li>
