--- a/punajut/src/main/webapp/index.html
+++ b/punajut/src/main/webapp/index.html
@@ -23,7 +23,7 @@
 
         <!--Dependencias bootstrap-->
         <!-- Optional theme -->
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">
+	<!--<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap-theme.min.css">-->
         <!-- bootstrap js-->
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.6/js/bootstrap.min.js" type="text/javascript"></script>
         <!--<script src="resources/js/bootstrap.min.js" type="text/javascript"></script>-->
@@ -83,9 +83,16 @@
 <!--
         <link rel="stylesheet" href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.11.4/themes/smoothness/jquery-ui.min.css" />
         <script src="http://code.jquery.com/ui/1.11.4/jquery-ui.min.js"></script>-->
+<!--Foro ctrl, mod,etc -->
 
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.2/ui-bootstrap-tpls.min.js"></script>
 
-
+<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-bootstrap/1.1.2/ui-bootstrap.min.js"></script>
+<script src="src/modules/comunidad/foro.mod.js" type="text/javascript"></script>
+<script src="src/modules/comunidad/foro.ctrl.js" type="text/javascript"></script>
+<script src="src/modules/comunidad/foro.svc.js" type="text/javascript"></script>
+<script src="src/modules/comunidad/foro.mock.js" type="text/javascript"></script>
+<!-- termina -->
         <script src="resources/js/vis.min.js" type="text/javascript"></script>
         <link href="resources/css/vis.min.css" rel="stylesheet" type="text/css"/>
         <link href="resources/css/timeline.css" rel="stylesheet" type="text/css"/>
