Se agregó modulo itinerarios

--- a/punajut/src/main/webapp/src/itinerario/itinerarios.tpl.html
+++ b/punajut/src/main/webapp/src/itinerario/itinerarios.tpl.html
@@ -62,7 +62,7 @@
                         <!-- END SIDEBAR USER TITLE -->
                         <!-- SIDEBAR BUTTONS -->
                         <div class="profile-userbuttons">
-                                    <a ui-sref="configurarCuenta"><button type="button" class="btn btn-success btn-sm">EditarPerfil</button></a>
+                            <a ui-sref="configurarCuenta"><button type="button" class="btn btn-success btn-sm">EditarPerfil</button></a>
                         </div>
                         <!-- END SIDEBAR BUTTONS -->
                         <!-- SIDEBAR MENU -->
@@ -120,71 +120,75 @@
                 </div>
             </div>
             <b>Mis apuntes:</b>
-             <p><textarea ng-model="apuntes" cols="40" rows="10"></textarea></p>
-             <button type="button" ng-click="guardarApuntes()">Guardar</button>
-             <button type="button" ng-click="eliminarApuntes()">Eliminar</button>
-             <p>{{apuntes}}</p>;
+            <p><textarea ng-model="apuntes" cols="40" rows="10"></textarea></p>
+            <button type="button" ng-click="guardarApuntes()">Guardar</button>
+            <button type="button" ng-click="eliminarApuntes()">Eliminar</button>
+            <p>{{apuntes}}</p>;
         </div>
     </div>
 </div>
+
+<script src="itinerariosMod.js"></script>
+<script src="itinerariosCtrl.js"></script>
+
 <script>
 
-    function nuevaPagina1() {
-        var opcion = prompt("¿Qué quieres hacer con el itinerario 1? Editar:0, Eliminar:1");
+                function nuevaPagina1() {
+                    var opcion = prompt("¿Qué quieres hacer con el itinerario 1? Editar:0, Eliminar:1");
 
-        if (opcion == 0)
-        {
-            alert("Editar imagen");
-        } else
-        {
-            alert("Eliminar imagen");
-            var elem = document.getElementById("imagen1");
-            elem.parentNode.removeChild(elem);
-            return false;
-        }
-    }
+                    if (opcion == 0)
+                    {
+                        alert("Editar imagen");
+                    } else
+                    {
+                        alert("Eliminar imagen");
+                        var elem = document.getElementById("imagen1");
+                        elem.parentNode.removeChild(elem);
+                        return false;
+                    }
+                }
 
-    function nuevaPagina2() {
-        var opcion = prompt("¿Qué quieres hacer con el itinerario 2? Editar:0, Eliminar:1");
+                function nuevaPagina2() {
+                    var opcion = prompt("¿Qué quieres hacer con el itinerario 2? Editar:0, Eliminar:1");
 
-        if (opcion == 0)
-        {
-            alert("Editar imagen");
-        } else
-        {
-            alert("Eliminar imagen");
-            var elem = document.getElementById("imagen2");
-            elem.parentNode.removeChild(elem);
-            return false;
-        }
-    }
+                    if (opcion == 0)
+                    {
+                        alert("Editar imagen");
+                    } else
+                    {
+                        alert("Eliminar imagen");
+                        var elem = document.getElementById("imagen2");
+                        elem.parentNode.removeChild(elem);
+                        return false;
+                    }
+                }
 
-    function nuevaPagina3() {
-        var opcion = prompt("¿Qué quieres hacer con el itinerario 3? Editar:0, Eliminar:1");
+                function nuevaPagina3() {
+                    var opcion = prompt("¿Qué quieres hacer con el itinerario 3? Editar:0, Eliminar:1");
 
-        if (opcion == 0)
-        {
-            alert("Editar imagen");
-        } else
-        {
-            alert("Eliminar imagen");
-            var elem = document.getElementById("imagen3");
-            elem.parentNode.removeChild(elem);
-            return false;
-        }
-    }
-    function nuevaPagina4() {
-        var opcion = prompt("¿Qué quieres hacer con el itinerario 4? Editar:0, Eliminar:1");
+                    if (opcion == 0)
+                    {
+                        alert("Editar imagen");
+                    } else
+                    {
+                        alert("Eliminar imagen");
+                        var elem = document.getElementById("imagen3");
+                        elem.parentNode.removeChild(elem);
+                        return false;
+                    }
+                }
+                function nuevaPagina4() {
+                    var opcion = prompt("¿Qué quieres hacer con el itinerario 4? Editar:0, Eliminar:1");
 
-        if (opcion == 0)
-        {
-            alert("Editar imagen");
-        } else
-        {
-            alert("Eliminar imagen");
-            var elem = document.getElementById("imagen4");
-            elem.parentNode.removeChild(elem);
-            return false;
-        }
-    }
+                    if (opcion == 0)
+                    {
+                        alert("Editar imagen");
+                    } else
+                    {
+                        alert("Eliminar imagen");
+                        var elem = document.getElementById("imagen4");
+                        elem.parentNode.removeChild(elem);
+                        return false;
+                    }
+                }
 </script>
