Correcciones en el módulo comunidad

--- a/punajut/src/main/webapp/src/modules/comunidad/comunidad.tpl.html
+++ b/punajut/src/main/webapp/src/modules/comunidad/comunidad.tpl.html
@@ -1,44 +1,3 @@
-<!--<!DOCTYPE html>
-<html lang="es">
-    <head>
-<!-- METADATOS
-<title>GoTravel</title>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-<script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="css/itinerarioscss.css">
-<script src="resources/js/itinerariosjs.js"></script>
-
-</head>-->
-
-<!--  <body>
-<!-- NAVIGATION BAR
-<nav class="navbar navbar-inverse">
-<div class="container-fluid">
-  <div class="navbar-header">
-      <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-          <span class="icon-bar"></span>
-      </button>
-      <a class="navbar-brand" href="#">GoTravel</a>
-  </div>
-  <div class="collapse navbar-collapse" id="myNavbar">
-      <ul class="nav navbar-nav">
-          <li class="active"><a href="#">Itinerarios</a></li>
-          <li><a href="#">Recordatorios  </a></li>
-          <li><a href="#">Ajustes</a></li>
-      </ul>
-      <ul class="nav navbar-nav navbar-right">
-          <li><a href="#"><span class="glyphicon glyphicon-log-in"></span> Login</a></li>
-      </ul>
-  </div>
-</div>
-</nav>-->
-
-<!-- ESTO ES UNA PRUEBA -->
 <!-- BARRA LATERAL -->
 <div ng-app="itinerariosApp" ng-controller="itinerariosCtrl" class="container">
     <div class="row content">
@@ -128,67 +87,6 @@
     </div>
 </div>
 
-<script src="itinerariosMod.js"></script>
-<script src="itinerariosCtrl.js"></script>
-
-<script>
-
-                function nuevaPagina1() {
-                    var opcion = prompt("¿Qué quieres hacer con el itinerario 1? Editar:0, Eliminar:1");
-
-                    if (opcion == 0)
-                    {
-                        alert("Editar imagen");
-                    } else
-                    {
-                        alert("Eliminar imagen");
-                        var elem = document.getElementById("imagen1");
-                        elem.parentNode.removeChild(elem);
-                        return false;
-                    }
-                }
-
-                function nuevaPagina2() {
-                    var opcion = prompt("¿Qué quieres hacer con el itinerario 2? Editar:0, Eliminar:1");
-
-                    if (opcion == 0)
-                    {
-                        alert("Editar imagen");
-                    } else
-                    {
-                        alert("Eliminar imagen");
-                        var elem = document.getElementById("imagen2");
-                        elem.parentNode.removeChild(elem);
-                        return false;
-                    }
-                }
-
-                function nuevaPagina3() {
-                    var opcion = prompt("¿Qué quieres hacer con el itinerario 3? Editar:0, Eliminar:1");
-
-                    if (opcion == 0)
-                    {
-                        alert("Editar imagen");
-                    } else
-                    {
-                        alert("Eliminar imagen");
-                        var elem = document.getElementById("imagen3");
-                        elem.parentNode.removeChild(elem);
-                        return false;
-                    }
-                }
-                function nuevaPagina4() {
-                    var opcion = prompt("¿Qué quieres hacer con el itinerario 4? Editar:0, Eliminar:1");
-
-                    if (opcion == 0)
-                    {
-                        alert("Editar imagen");
-                    } else
-                    {
-                        alert("Eliminar imagen");
-                        var elem = document.getElementById("imagen4");
-                        elem.parentNode.removeChild(elem);
-                        return false;
-                    }
-                }
-</script>
+<script src="comunidad.mod.js"></script>
+<script src="comunidad.ctrl.js"></script>
+<script src="comunidad.js"></script>
