Correcciones index.html

--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -82,12 +82,12 @@
                     </li>
                 </ul>
             </nav>
-            <div ui-view></div>
+            <!-- <div ui-view></div>
             <div class="col-sm-6">
                 <div ui-view="principal"></div>
             </div>
             <div ui-view="centro"></div>
-        </div>
+        </div> -->
 
 
         <!-- jQuery -->
