Correcciones index.html

--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -146,9 +146,9 @@
                         <!-- Collect the nav links, forms, and other content for toggling -->
                         <div class="collapse navbar-collapse" id="main-bar">
                             <ul class="nav navbar-nav">
-                                <li><a ui-sref="book">Inicio</a></li>
-                                <li><a ui-sref="editorial">Perfil</a></li>
-                                <li><a ui-sref="itinerarios">Itinerarios</a></li>
+                                <li><a ui-sref="PaginaDeInicio">Inicio</a></li>
+                                <li><a ui-sref="usuario">Perfil</a></li>
+                                <li><a ui-sref="CrearIt">Itinerarios</a></li>
                             </ul>
                         </div> <!-- /.navbar-collapse -->
                     </div> <!-- /.container-fluid -->
