Agregadas dependencias de arquillian

--- a/punajut-web/src/main/webapp/src/modules/itinerario/itinerario.tpl.html
+++ b/punajut-web/src/main/webapp/src/modules/itinerario/itinerario.tpl.html
@@ -1,5 +1,5 @@
 <div>
-    <div style="border-bottom:1px solid #000;"> 
+    <div style="border-bottom:1px solid #000;">
         <div style = "display:inline-block"><h1>Itinerario 1- Ciudades</h1></div>
         <div style = "display:inline-block; align:right"><h4>Desde 24/04/2015 Hasta 28/04/2015</h4></div>
     </div>
@@ -30,6 +30,7 @@
         </div>
     </div>
     <button id="create-itinerario" class="btn btn-default navbar-btn" ng-hide="ctrl.editMode" ng-click="ctrl.createRecord()"><span class="glyphicon glyphicon-plus"></span> Agregar ciudad</button>
+    <button id="create-itinerario" class="btn btn-default navbar-btn" ng-hide="ctrl.editMode" ng-click="ctrl.createRecord()"><span class="glyphicon glyphicon-plus"></span> Boton</button>
 
 
 </div>
