--- a/punajut-web/src/main/webapp/index.html
+++ b/punajut-web/src/main/webapp/index.html
@@ -32,9 +32,9 @@
         <script src="src/modules/usuario/usuario.svc.js" type="text/javascript"></script>
         <script src="src/modules/usuario/usuario.mock.js" type="text/javascript"></script>
 
+        <script src="src/modules/itinerario/itinerario.mod.js" type="text/javascript"></script>
         <script src="src/modules/itinerario/itinerario.ctrl.js" type="text/javascript"></script>
         <script src="src/modules/itinerario/itinerario.svc.js" type="text/javascript"></script>
-        <script src="src/modules/itinerario/itinerario.mod.js" type="text/javascript"></script>
         <script src="src/modules/itinerario/itinerario.mock.js" type="text/javascript"></script>
 
         <script src="src/modules/visitaCiudad/visitaCiudad.ctrl.js" type="text/javascript"></script>
@@ -52,11 +52,6 @@
         <script src="src/modules/ciudad/ciudad.svc.js" type="text/javascript"></script>
         <!--    Falta     <script src="src/modules/ciudad/ciudad.mock.js" type="text/javascript"></script>-->
 
-        <!--    Supongo que ya no se usa
-        <link href="resources/css/stylish-portfolio.css" rel="stylesheet" type="text/css"/>
-        <link href="resources/css/font-awesome.min.css" rel="stylesheet" type="text/css"/>
-        <link href="http://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css"> -->
-
         <!-- Estilos de cada modulo -->
         <link rel="stylesheet" href="resources/css/ciudadStyle.css">
         <link rel="stylesheet" href="resources/css/visitaCiudad.css">
@@ -67,7 +62,7 @@
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.12.0/moment.min.js"></script>
 	<!-- DateTimePicker -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/js/bootstrap-datetimepicker.min.js"></script>
-	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker-standalone.min.css">
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/4.17.37/css/bootstrap-datetimepicker.min.css">
 
     </head>
     <body style="padding-top: 60px;">
@@ -165,6 +160,7 @@
                                 <li><a ui-sref="usuario">Perfil</a></li>
                                 <li><a ui-sref="itinerario">Itinerarios</a></li>
                                 <li><a ui-sref="ciudad">Prueba ciudad</a></li>
+                                <li><a ui-sref="visitaCiudad">Prueba visita ciudad</a></li>
                             </ul>
                         </div> <!-- /.navbar-collapse -->
                     </div> <!-- /.container-fluid -->
